<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.details.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_main_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:contentInsetStart="@dimen/tool_bar_padding"
            android:contentInsetLeft="@dimen/dp_40"
            android:contentInsetEnd="@dimen/tool_bar_padding"
            android:contentInsetRight="@dimen/tool_bar_padding"
            app:contentInsetEnd="@dimen/tool_bar_padding"
            app:contentInsetLeft="@dimen/tool_bar_padding"
            app:contentInsetRight="@dimen/tool_bar_padding"
            app:contentInsetStart="@dimen/tool_bar_padding"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_img"
                    android:layout_width="@dimen/tool_icon_size"
                    android:layout_height="@dimen/tool_icon_size"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_arrow_back" />

                <TextView
                    android:id="@+id/activity_main_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/back_img"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/link_development"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tool_bar_title_text_size" />

                <ImageView
                    android:layout_width="@dimen/tool_icon_size"
                    android:layout_height="@dimen/tool_icon_size"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_baseline_search_24" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBasic"
            android:clipToPadding="false"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/def_margin"
                android:layout_marginTop="@dimen/def_margin"
                android:layout_marginEnd="@dimen/def_margin"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/list_item_tool_bar_title_text_size">


                        <ImageView
                            android:id="@+id/image_details"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/placeholder" />

                        <TextView
                            android:id="@+id/date_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="@dimen/details_date_margin"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:text="@string/date_place_holder"
                            android:textColor="@color/white"
                            android:textSize="@dimen/list_item_date_text_size" />
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/title_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/title_place_holder"
                            android:textColor="@color/colorMaintitle"
                            android:textSize="@dimen/news_title_text_size" />

                        <TextView
                            android:id="@+id/sponsored_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/list_item_default_item_top_margin"
                            android:ellipsize="end"
                            android:gravity="start"
                            android:maxLines="1"
                            android:text="@string/sponsered_place_holder"
                            android:textColor="@color/colorDate"
                            android:textSize="@dimen/sponsered_text_size" />

                        <TextView
                            android:id="@+id/description_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/description_margin"
                            android:layout_marginBottom="@dimen/description_margin"
                            android:gravity="start"
                            android:text="@string/title_place_holder"
                            android:textColor="@color/colorDate"
                            android:textSize="@dimen/description_text_size" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/open_website_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/open_web_btn_height"
                android:layout_margin="@dimen/def_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/open_website"
                android:textColor="@color/white"
                android:textSize="@dimen/open_web_btn_text_size"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>


