<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    tools:openDrawer="start">

    <!-- Main Activity -->
    <LinearLayout
        android:id="@+id/main_activity_content_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/activity_main_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:contentInsetStart="@dimen/tool_bar_padding"
                android:contentInsetLeft="@dimen/dp_40"
                android:contentInsetEnd="@dimen/tool_bar_padding"
                android:contentInsetRight="@dimen/tool_bar_padding"
                android:weightSum="1"
                app:contentInsetEnd="@dimen/tool_bar_padding"
                app:contentInsetLeft="@dimen/tool_bar_padding"
                app:contentInsetRight="@dimen/tool_bar_padding"
                app:contentInsetStart="@dimen/tool_bar_padding"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:id="@+id/activity_main_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/link_development"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tool_bar_title_text_size" />

                <ImageView
                    android:layout_width="@dimen/tool_icon_size"
                    android:layout_height="@dimen/tool_icon_size"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_baseline_search_24" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/activity_main_content_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBasic"
            android:clipToPadding="false">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_feed_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/main_news_list_item"

                />
            <include layout="@layout/layout_error" android:id="@+id/limiteViewError" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Main Activity End -->


    <!-- Custom Navigation Drawer Start -->
    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorNav"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/def_margin"
            android:layout_marginTop="@dimen/nav_header_margin_top"
            android:layout_marginEnd="@dimen/def_margin"
            android:layout_marginBottom="@dimen/def_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_img"
                android:layout_width="@dimen/nav_header_image_size"
                android:layout_height="@dimen/nav_header_image_size"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_toStartOf="@+id/open_profile_img"
                android:layout_toEndOf="@+id/user_img"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/welcome" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/tony_roshdy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nav_header_name_text_size" />
            </LinearLayout>

            <ImageView
                android:id="@+id/open_profile_img"
                android:layout_width="@dimen/nav_header_open_profile_img_width"
                android:layout_height="@dimen/nav_header_open_profile_img_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/navigation_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/def_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_nav_drawer">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>